# LSY

CJCC/: settings.gradle
CJCC/app/: build.gradle
CJCC/app/src/main/: AndroidManifest.xml
CJCC/gradle/wrapper/: gradle-wrapper.properties
CJCC/videorecorder/: build.gradle
CJCC/videorecorder/src/main/cpp/: CMakeLists.txt  YuvOsdUtils.c  YuvOsdUtils.h
CJCC/videorecorder/src/main/jni/: CMakeLists.txt  native-lib.cpp
CJCC/videorecorder/src/main/jni/include/: AndroidLog.h
app_androidx/: build.gradle  config.gradle  gradle.properties  loushanyunAndroid.jks  loushanyunDebug.jks  settings.gradle
app_androidx/Tool/: build.gradle
app_androidx/app/: build.gradle
app_androidx/app/release/: output.json
app_androidx/base/: build.gradle
app_androidx/gradle/wrapper/: gradle-wrapper.properties
app_androidx/library-banner/: build.gradle
app_androidx/library-base/: build.gradle
app_androidx/library-five/: build.gradle
app_androidx/library-loushanyun/: build.gradle
app_androidx/library-matisse/: build.gradle
app_androidx/library-printer/: build.gradle
app_androidx/library-uart/: build.gradle
app_androidx/library-zxingcore/: build.gradle
app_androidx/module-chiptest/: build.gradle
app_androidx/module-fiveapp/: build.gradle  proguard-rules.pro
app_androidx/module-initthree/: build.gradle
app_androidx/module-inittwo/: build.gradle
app_androidx/module-jizhan/: build.gradle
app_androidx/module-repair/: build.gradle
app_androidx/module-sixapp/: build.gradle
app_androidx/module-test/: build.gradle
app_androidx/module_factory/: build.gradle
(+1483 files in other folders)
